一些前端页面以及编码习惯的修改

--- a/resources/js/pages/Chat.styl
+++ b/resources/js/pages/Chat.styl
@@ -4,13 +4,18 @@
   overflow: hidden;
   background: #f1f5f8;
   -webkit-overflow-scrolling: touch;
+  margin-left : 0 !important;
+  margin-right : 0 !important;
+  padding-left : 0 !important;
+  padding-right : 0 !important;
+  max-width: none !important;
 
   .chat-inner {
     position: absolute;
     width: 100%;
     overflow-y: scroll;
     overflow-x: hidden;
-    top: 56px;
+    top: 80px;
     bottom: 80px;
   }
 
