--- a/resources/js/components/Message/index.styl
+++ b/resources/js/components/Message/index.styl
@@ -13,15 +13,26 @@
             max-width: 200px;
         }
 
-        .name {
+        .nickname {
             position: absolute;
-            top: -20px;
-            width: 280px;
+            top: 30px;
+            width: 65px;
             height: 20px;
             overflow: hidden;
             -ms-text-overflow: ellipsis;
             text-overflow: ellipsis;
             white-space: nowrap;
+            font-size: 15px;
+            text-align: center;
+            color: #313035;
+
+        }
+        .msg_time {
+            position: absolute;
+            top: -18px;
+            font-size: 12px;
+            width: 115px;
+            color:#aaa;
         }
 
         .msg {
@@ -45,6 +56,7 @@
             background: #fff;
             border-radius: 50px;
             overflow: hidden;
+            top: -20px;
         }
 
         .head {
@@ -64,6 +76,10 @@
 }
 
 .left {
+    .msg_time{
+        left: -15px;
+        text-align:left;
+    }
     .item {
         // animation: show-chat-even 0.25s 1 ease-in
         float: left;
@@ -77,9 +93,8 @@
         }
     }
 
-    .name {
-        text-align: left;
-        left: -70px;
+    .nickname {
+        left: -80px;
     }
 
     .time {
@@ -92,6 +107,10 @@
 }
 
 .right {
+    .msg_time{
+        right: -15px;
+        text-align:right;
+    }
     .item {
         // animation: show-chat-odd 0.25s 1 ease-in
         float: right;
@@ -106,10 +125,8 @@
         }
     }
 
-    .name {
-        color: #313035;
-        text-align: right;
-        right: -70px;
+    .nickname {
+        right: -80px;
     }
 
     .time {
