--- a/public/css/app.css
+++ b/public/css/app.css
@@ -198,16 +198,16 @@ div .mu-pagination {
 }
 
 div .mu-appbar {
-  background-color: #2196f3 !important;
+  background-color: #137055 !important;
 }
 
 .mu-bottom-item-active .mu-bottom-item-icon,
 .mu-bottom-item-active .mu-bottom-item-text {
-  color: #2196f3 !important;
+  color: #137055 !important;
 }
 
 .demo-raised-button {
-  background-color: #2196f3 !important;
+  background-color: #137055 !important;
   color: #fff !important;
 }
 
