--- a/resources/js/components/Message/index.styl
+++ b/resources/js/components/Message/index.styl
@@ -116,11 +116,11 @@
         float: right;
         margin-right: 80px;
         color: #fff;
-        background: #2196f3;
+        background: #137055;
 
         &:after {
             right: -15px;
-            border-top: 15px solid #2196f3;
+            border-top: 15px solid #137055;
             border-right: 15px solid transparent;
         }
     }
