--- a/resources/js/pages/Chat.styl
+++ b/resources/js/pages/Chat.styl
@@ -242,7 +242,7 @@
   .lds-rolling div:after {
     width: 20px;
     height: 20px;
-    border: 2px solid #2196f3;
+    border: 2px solid #137055;
     border-top-color: transparent;
     border-radius: 50%;
     margin: 20px auto 0;
