前端代码优化

--- a/public/css/app.css
+++ b/public/css/app.css
@@ -186,7 +186,7 @@ input {
 }
 
 /* ::-webkit-scrollbar{width:0px} */
-@import url(https://fonts.googleapis.com/css?family=Nunito);html,
+html,
 body {
   width: 100%;
   height: 100%;
